Text align fix

--- a/source/stylesheets/partials/_sprint.css.scss
+++ b/source/stylesheets/partials/_sprint.css.scss
@@ -654,9 +654,8 @@
 
       @media (max-width: 666px) {
         position: relative;
-        text-align: center;
         margin: auto;
-        width: 80%;
+        width: 100%;
       }
 
       .green-text {
